--- a/css/style.css
+++ b/css/style.css
@@ -325,14 +325,14 @@ a:focus {
   background-color: #f89646;
 }
 
-.furniture_section .box {
+.Services_section .box {
   margin-top: 45px;
   background-color: #f7fafa;
   padding: 25px;
   border-radius: 5px;
 }
 
-.furniture_section .box .img-box {
+.Services_section .box .img-box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -346,21 +346,21 @@ a:focus {
   padding: 25px;
 }
 
-.furniture_section .box .img-box img {
+.Services_section .box .img-box img {
   max-width: 100%;
   max-height: 100%;
 }
 
-.furniture_section .box .detail-box {
+.Services_section .box .detail-box {
   margin-top: 15px;
 }
 
-.furniture_section .box .detail-box h5 {
+.Services_section .box .detail-box h5 {
   text-transform: uppercase;
   font-size: 18px;
 }
 
-.furniture_section .box .detail-box .price_box {
+.Services_section .box .detail-box .price_box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -369,15 +369,15 @@ a:focus {
           justify-content: space-between;
 }
 
-.furniture_section .box .detail-box .price_box .price_heading {
+.Services_section .box .detail-box .price_box .price_heading {
   margin-bottom: 0;
 }
 
-.furniture_section .box .detail-box .price_box .price_heading span {
+.Services_section .box .detail-box .price_box .price_heading span {
   color: #6bb7be;
 }
 
-.furniture_section .box .detail-box .price_box a {
+.Services_section .box .detail-box .price_box a {
   color: #6bb7be;
   text-transform: uppercase;
   font-size: 15px;
