--- a/css/style.scss
+++ b/css/style.scss
@@ -327,9 +327,9 @@ a:focus {
 
 // end slider section
 
-// furniture section
+// Services section
 
-.furniture_section {
+.Services_section {
   .box {
     margin-top: 45px;
     // box-shadow: 0 0 5px 0 rgba($color: #000000, $alpha: .25);
@@ -381,7 +381,7 @@ a:focus {
   }
 }
 
-// end furniture section
+// end Services section
 
 // about section
 
